nginx-eks/k8s/cine-tmdb-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cine-tmdb
  labels:
    app.kubernetes.io/managed-by: kubectl
