nginx-eks/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cine
  labels:
    app.kubernetes.io/managed-by: kubectl
