nginx-eks/k8s/cine-tmdb-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cine-tmdb
  namespace: cine-tmdb
  labels:
    app: cine-tmdb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cine-tmdb
  template:
    metadata:
      labels:
        app: cine-tmdb
    spec:
      containers:
        - name: cine-tmdb
          image: CINE_TMDB_IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cine-tmdb
  namespace: cine-tmdb
spec:
  selector:
    app: cine-tmdb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
