nginx-eks/k8s/cine-tmdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cine-tmdb
  namespace: cine-tmdb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cine-tmdb.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cine-tmdb
                port:
                  number: 80
