nginx-eks/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cine
  namespace: cine
  annotations:
    # NGINX Plus IC WAF — APPolicy + log in same namespace
    nginx.org/app-protect-policy: "cine/waf-policy"
    nginx.org/app-protect-security-log-enable: "true"
    nginx.org/app-protect-security-log: "cine/waf-logconf"
    nginx.org/app-protect-security-log-destination: "syslog:server=127.0.0.1:514"
spec:
  ingressClassName: nginx
  rules:
    - host: cine.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cine
                port:
                  number: 80
